--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,7 +11,31 @@ upstream fe_cluster {
 server {
   listen 80;
   listen [::]:80;
-  server_name localhost;
+  server_name genshinbanpick.top;
+
+  location /ws/ {
+    proxy_pass http://ws_cluster/;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+    proxy_set_header Host $host;
+  }
+    
+  location / {
+    proxy_pass http://fe_cluster;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
+  }
+}
+
+# Redirect SSL to primary domain SSL
+server {
+  listen 443;
+  listen [::]:443;
+  server_name genshinbanpick.top;
 
   location /ws/ {
     proxy_pass http://ws_cluster/;
@@ -23,5 +47,10 @@ server {
 
   location / {
     proxy_pass http://fe_cluster;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
   }
 }
