--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,12 @@ services:
   nginx:
     image: nginx:alpine
     container_name: nginx
+    restart: always
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
       - "80:80"
+      - "443:443"
 
   gbp_ws:
     image: frostwyrm9x/gbp_ws:latest
@@ -17,12 +19,13 @@ services:
       - ./ws/config.yaml:/app/config.yaml
 
   gbp_fe:
-    image: frostwyrm9x/gbp_fe:dev
+    image: frostwyrm9x/gbp_fe:prod
     restart: always
     container_name: gbp_fe
 
   redis:
-    image: redis:alpine
+    image: redis:7.0.10-alpine
+    restart: always
     container_name: redis
     command: [ "redis-server", "--save" ]
 
