--- a/ws/config.yaml
+++ b/ws/config.yaml
@@ -44,79 +44,448 @@ text_messages:
   un_watch: "%s has left the game!!!"
 
 # Game format
+GAME_FORMAT_INFO:
+  "4":
+    abyss: 24
+    onslaught: 32
+  "3":
+    abyss: 22
+    onslaught: 30
+  "2":
+    abyss: 20
+    onslaught: 28
+  "1":
+    abyss: 18
+    onslaught: 26
+  "0":
+    abyss: 16
+    onslaught: 24
 GAME_TURN_FORMAT:
-  1:
-    pick: false
-    player: 1
-  2:
-    pick: false
-    player: 2
-  3:
-    pick: false
-    player: 1
-  4:
-    pick: false
-    player: 2
-  5:
-    pick: false
-    player: 1
-  6:
-    pick: false
-    player: 2
-  7:
-    pick: true
-    player: 1
-  8:
-    pick: true
-    player: 2
-  9:
-    pick: true
-    player: 2
-  10:
-    pick: true
-    player: 1
-  11:
-    pick: true
-    player: 1
-  12:
-    pick: true
-    player: 2
-  13:
-    pick: true
-    player: 2
-  14:
-    pick: true
-    player: 1
-  15:
-    pick: false
-    player: 1
-  16:
-    pick: false
-    player: 2
-  17:
-    pick: true
-    player: 2
-  18:
-    pick: true
-    player: 1
-  19:
-    pick: true
-    player: 1
-  20:
-    pick: true
-    player: 2
-  21:
-    pick: true
-    player: 2
-  22:
-    pick: true
-    player: 1
-  23:
-    pick: true
-    player: 1
-  24:
-    pick: true
-    player: 2
+  "4":
+    1:
+      pick: false
+      player: 1
+    2:
+      pick: false
+      player: 2
+    3:
+      pick: false
+      player: 1
+    4:
+      pick: false
+      player: 2
+    5:
+      pick: false
+      player: 1
+    6:
+      pick: false
+      player: 2
+    7:
+      pick: true
+      player: 1
+    8:
+      pick: true
+      player: 2
+    9:
+      pick: true
+      player: 2
+    10:
+      pick: true
+      player: 1
+    11:
+      pick: true
+      player: 1
+    12:
+      pick: true
+      player: 2
+    13:
+      pick: true
+      player: 2
+    14:
+      pick: true
+      player: 1
+    15:
+      pick: false
+      player: 1
+    16:
+      pick: false
+      player: 2
+    17:
+      pick: true
+      player: 2
+    18:
+      pick: true
+      player: 1
+    19:
+      pick: true
+      player: 1
+    20:
+      pick: true
+      player: 2
+    21:
+      pick: true
+      player: 2
+    22:
+      pick: true
+      player: 1
+    23:
+      pick: true
+      player: 1
+    24:
+      pick: true
+      player: 2
+    25:
+      pick: true
+      player: 2
+    26:
+      pick: true
+      player: 1
+    27:
+      pick: true
+      player: 1
+    28:
+      pick: true
+      player: 2
+    29:
+      pick: true
+      player: 2
+    30:
+      pick: true
+      player: 1
+    31:
+      pick: true
+      player: 1
+    32:
+      pick: true
+      player: 2
+  "3":
+    1:
+      pick: false
+      player: 1
+    2:
+      pick: false
+      player: 2
+    3:
+      pick: false
+      player: 1
+    4:
+      pick: false
+      player: 2
+    5:
+      pick: true
+      player: 1
+    6:
+      pick: true
+      player: 2
+    7:
+      pick: true
+      player: 2
+    8:
+      pick: true
+      player: 1
+    9:
+      pick: true
+      player: 1
+    10:
+      pick: true
+      player: 2
+    11:
+      pick: true
+      player: 2
+    12:
+      pick: true
+      player: 1
+    13:
+      pick: false
+      player: 1
+    14:
+      pick: false
+      player: 2
+    15:
+      pick: true
+      player: 2
+    16:
+      pick: true
+      player: 1
+    17:
+      pick: true
+      player: 1
+    18:
+      pick: true
+      player: 2
+    19:
+      pick: true
+      player: 2
+    20:
+      pick: true
+      player: 1
+    21:
+      pick: true
+      player: 1
+    22:
+      pick: true
+      player: 2
+    23:
+      pick: true
+      player: 2
+    24:
+      pick: true
+      player: 1
+    25:
+      pick: true
+      player: 1
+    26:
+      pick: true
+      player: 2
+    27:
+      pick: true
+      player: 2
+    28:
+      pick: true
+      player: 1
+    29:
+      pick: true
+      player: 1
+    30:
+      pick: true
+      player: 2
+  "2":
+    1:
+      pick: false
+      player: 1
+    2:
+      pick: false
+      player: 2
+    3:
+      pick: true
+      player: 1
+    4:
+      pick: true
+      player: 2
+    5:
+      pick: true
+      player: 2
+    6:
+      pick: true
+      player: 1
+    7:
+      pick: true
+      player: 1
+    8:
+      pick: true
+      player: 2
+    9:
+      pick: true
+      player: 2
+    10:
+      pick: true
+      player: 1
+    11:
+      pick: false
+      player: 1
+    12:
+      pick: false
+      player: 2
+    13:
+      pick: true
+      player: 2
+    14:
+      pick: true
+      player: 1
+    15:
+      pick: true
+      player: 1
+    16:
+      pick: true
+      player: 2
+    17:
+      pick: true
+      player: 2
+    18:
+      pick: true
+      player: 1
+    19:
+      pick: true
+      player: 1
+    20:
+      pick: true
+      player: 2
+    21:
+      pick: true
+      player: 2
+    22:
+      pick: true
+      player: 1
+    23:
+      pick: true
+      player: 1
+    24:
+      pick: true
+      player: 2
+    25:
+      pick: true
+      player: 2
+    26:
+      pick: true
+      player: 1
+    27:
+      pick: true
+      player: 1
+    28:
+      pick: true
+      player: 2
+  "1":
+    1:
+      pick: false
+      player: 1
+    2:
+      pick: false
+      player: 2
+    3:
+      pick: true
+      player: 1
+    4:
+      pick: true
+      player: 2
+    5:
+      pick: true
+      player: 2
+    6:
+      pick: true
+      player: 1
+    7:
+      pick: true
+      player: 1
+    8:
+      pick: true
+      player: 2
+    9:
+      pick: true
+      player: 2
+    10:
+      pick: true
+      player: 1
+    11:
+      pick: true
+      player: 2
+    12:
+      pick: true
+      player: 1
+    13:
+      pick: true
+      player: 1
+    14:
+      pick: true
+      player: 2
+    15:
+      pick: true
+      player: 2
+    16:
+      pick: true
+      player: 1
+    17:
+      pick: true
+      player: 1
+    18:
+      pick: true
+      player: 2
+    19:
+      pick: true
+      player: 2
+    20:
+      pick: true
+      player: 1
+    21:
+      pick: true
+      player: 1
+    22:
+      pick: true
+      player: 2
+    23:
+      pick: true
+      player: 2
+    24:
+      pick: true
+      player: 1
+    25:
+      pick: true
+      player: 1
+    26:
+      pick: true
+      player: 2
+  "0":
+    1:
+      pick: true
+      player: 1
+    2:
+      pick: true
+      player: 2
+    3:
+      pick: true
+      player: 2
+    4:
+      pick: true
+      player: 1
+    5:
+      pick: true
+      player: 1
+    6:
+      pick: true
+      player: 2
+    7:
+      pick: true
+      player: 2
+    8:
+      pick: true
+      player: 1
+    9:
+      pick: true
+      player: 2
+    10:
+      pick: true
+      player: 1
+    11:
+      pick: true
+      player: 1
+    12:
+      pick: true
+      player: 2
+    13:
+      pick: true
+      player: 2
+    14:
+      pick: true
+      player: 1
+    15:
+      pick: true
+      player: 1
+    16:
+      pick: true
+      player: 2
+    17:
+      pick: true
+      player: 2
+    18:
+      pick: true
+      player: 1
+    19:
+      pick: true
+      player: 1
+    20:
+      pick: true
+      player: 2
+    21:
+      pick: true
+      player: 2
+    22:
+      pick: true
+      player: 1
+    23:
+      pick: true
+      player: 1
+    24:
+      pick: true
+      player: 2
 
 
 # GAME Config
